Refactor MatchingService: update findPotentialMatches method to return MatchingCardDto and simplify exercise checks